--- a/year2023/Cargo.toml
+++ b/year2023/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 [lib]
 bench = false
 
+[features]
+bruteforce = []
+
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
